[workspace]
members = ["contracts/token-streaming", "contracts/vesting_curves"]
resolver = "2"

[workspace.package]
authors = ["Wishart Torgersrud (WT) Consulting"]
license = "Apache-2.0"
repository = "https://github.com/wt-xyz/token-streaming"
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
fuels = { version = "0.66.4", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
anyhow = "1.0.81"
rstest = "0.18.2"
time="0.3.36"
