[package]
name = "airstreams"
description = "Sway contracts for airstreams"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.34"
tai64 = "=4.0.0"
anyhow.workspace = true
fuels.workspace = true
catalyst-merkle = { path = "../../packages/catalyst-merkle" }

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
assert_matches = "1.5.0"
time.workspace = true
fuel-merkle.workspace = true
serde.workspace = true
sha2 = "0.10.8"
hex.workspace = true

[[test]]
name = "tests"
path = "tests/mod.rs"

[lib]
path = "src/lib.rs"