[package]
name = "token-streaming"
description = "Sway contracts for token streaming"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.34"
tai64 = "=4.0.0"
anyhow.workspace = true

[dev-dependencies]
fuels.workspace = true
fuels-core.workspace = true
rstest.workspace = true
tokio.workspace = true
assert_matches = "1.5.0"
