[package]
name = "vesting-curvess"
description = "Sway contract for vesting curves"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true

[dev-dependencies]
fuels.workspace = true
fuels-core.workspace = true
rstest.workspace = true
tokio.workspace = true
assert_matches = "1.5.0"
